// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate loader options should throw an error on the "minify" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minify-1
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minify-1
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minify-1
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minify" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minify should be one of these:
   function | [function, ...] (should not have fewer than 1 item)
   -> Allows you to override default minify function.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minify-1
   Details:
    * options.minify should be an instance of function.
    * options.minify should be an array:
      [function, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be a non-empty array."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"deleteOriginal":[]}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.deleteOriginal should be a boolean."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"deleteOriginal":{}}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.deleteOriginal should be a boolean."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filename":[]}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions.filename should be one of these:
      string | function
      Details:
       * options.minimizerOptions.filename should be a string.
       * options.minimizerOptions.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filename":{}}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions.filename should be one of these:
      string | function
      Details:
       * options.minimizerOptions.filename should be a string.
       * options.minimizerOptions.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filename":true}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions.filename should be one of these:
      string | function
      Details:
       * options.minimizerOptions.filename should be a string.
       * options.minimizerOptions.filename should be an instance of function."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filter":[]}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filter":{}}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filter":1}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filter":null}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{"filter":true}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.filter should be an instance of function.
   -> Allows filtering of images for optimization."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions.deleteOriginal should be a boolean."
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions should be an object:
      object { filename?, deleteOriginal?, filter?, … }
    * options.minimizerOptions should be an array:
      [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions should be an object:
      object { filename?, deleteOriginal?, filter?, … }
    * options.minimizerOptions should be an array:
      [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "null" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions should be an object:
      object { filename?, deleteOriginal?, filter?, … }
    * options.minimizerOptions should be an array:
      [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "minimizerOptions" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.minimizerOptions should be one of these:
   object { filename?, deleteOriginal?, filter?, … } | [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)
   -> Options for \`imageMinimizerOptions\`.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#minimizeroptions-1
   Details:
    * options.minimizerOptions should be an object:
      object { filename?, deleteOriginal?, filter?, … }
    * options.minimizerOptions should be an array:
      [object { filename?, deleteOriginal?, filter?, … }, ...] (should not have fewer than 1 item)"
`;

exports[`validate loader options should throw an error on the "severityError" option with "() => {}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "severityError" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options.severityError should be a string.
   -> Allows to choose how errors are displayed.
   -> Read more at https://github.com/webpack-contrib/image-minimizer-webpack-plugin#severityerror-1"
`;

exports[`validate loader options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;

exports[`validate loader options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Image Minimizer Plugin Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { minimizerOptions?, severityError?, minify?, preset? }"
`;
